apps/routing-apps/manifests/staging/install.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: route-backend-api
  namespace: default
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`api.staging.nodescript.dev`) && Path(`/ws`)
    services:
    - name: backend-api
      port: 8080
  - kind: Rule
    match: Host(`api.staging.nodescript.dev`)
    middlewares:
    - name: route-backend-api-prefix
    services:
    - name: backend-api
      port: 8080
  tls:
    secretName: nodescript-dev-certificate
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: route-backend-capture
  namespace: default
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`capture.run.staging.nodescript.dev`)
    middlewares:
    - name: route-backend-capture-prefix
    priority: 100
    services:
    - name: backend-invoke
      port: 8080
  tls:
    secretName: nodescript-dev-certificate
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: route-backend-invoke
  namespace: default
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: HostRegexp(`{subdomain:[0-9a-z-]+}.run.staging.nodescript.dev`)
    middlewares:
    - name: route-backend-invoke-prefix
    services:
    - name: backend-invoke
      port: 8080
  tls:
    secretName: nodescript-dev-certificate
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: route-fetch-service
  namespace: default
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`fetch.staging.nodescript.dev`)
    services:
    - name: fetch-service
      port: 8080
  tls:
    secretName: nodescript-dev-certificate
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: route-frontend
  namespace: default
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`staging.nodescript.dev`)
    services:
    - name: frontend
      port: 8080
  - kind: Rule
    match: Host(`embed.staging.nodescript.dev`)
    services:
    - name: frontend
      port: 8080
  - kind: Rule
    match: HostRegexp(`{subdomain:[0-9a-zA-Z_-]+}.edge.staging.nodescript.dev`)
    services:
    - name: frontend
      port: 8080
  tls:
    secretName: nodescript-dev-certificate
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: route-gateway-service
  namespace: default
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: HostRegexp(`w8132bq0.run.nodescript.dev`)
    services:
    - name: gateway-service
      port: 8080
  tls:
    secretName: nodescript-dev-certificate
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: route-guides
  namespace: default
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`docs.staging.nodescript.dev`)
    services:
    - name: guides
      port: 8900
  tls:
    secretName: nodescript-dev-certificate
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: route-registry-service
  namespace: default
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`registry.staging.nodescript.dev`)
    services:
    - name: registry-service
      port: 8080
  tls:
    secretName: nodescript-dev-certificate
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: route-backend-api-prefix
  namespace: default
spec:
  addPrefix:
    prefix: /~api
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: route-backend-capture-prefix
  namespace: default
spec:
  addPrefix:
    prefix: /~capture
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: route-backend-invoke-prefix
  namespace: default
spec:
  addPrefix:
    prefix: /~invoke
